<resources>
    <string name="app_name">Blayze</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">user@user.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_insights">Insights</string>
    <string name="menu_journal">Journal</string>
    <string name="menu_water">Water</string>
    <string name="menu_meditation">Meditation</string>
    <string name="menu_sleep">Sleep</string>
    <string name="welcome_text">Welcome to Blayze!</string>
    <string name="water_goal_text">Water Goal: %1$d glasses</string>
</resources>