<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home_1"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_insights"
            android:icon="@drawable/baseline_insights_24"
            android:title= "@string/menu_insights" />
        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/nav_journal_1"
            android:title="@string/menu_journal" />
        <item
            android:id="@+id/nav_water"
            android:icon="@drawable/nav_water_1"
            android:title="@string/menu_water" />
        <item
            android:id="@+id/nav_meditation"
            android:icon="@drawable/nav_med"
            android:title="@string/menu_meditation" />
        <item
            android:id="@+id/nav_sleep"
            android:icon="@drawable/nav_sleep_1"
            android:title="@string/menu_sleep" />
    </group>
</menu>